--- a/src/App.css
+++ b/src/App.css
@@ -5,25 +5,19 @@
 }
 
 .App{
-  width: 100vw;
+  width: 99vw;
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
+  background-color: rgb(255, 89, 89);
 }
-.App > div{
+.App div.filho{
+  width: 80%;
   display: flex;
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-bottom: 50px;
+  background-color: #fff;
 }
 
-button{
-  width: 500px;
-  height: 100px;
-  border-radius: 50px;
-  font-family: 'Luckiest Guy', cursive;
-  font-size: 50px;
-  cursor: pointer;
-  margin: auto;
-}
