--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 .App{
   width: 99vw;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,3 +22,32 @@
   background-color: #fff;
 }
 
+.search{
+  width: 100%;
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-color: aliceblue;
+}
+
+.search input{
+  font-size: 1.2em;
+  padding: 5px;
+  border-radius: 5px;
+  margin-right: 10px;
+  margin-bottom: 15px;
+}
+
+.search button.btn_search{
+  font-size: 1.2em;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #ff5959;
+  margin-bottom: 15px;
+}
+.search button.btn_search:hover{
+  color: #ffffff;
+}
