--- a/src/components/Button/index.css
+++ b/src/components/Button/index.css
@@ -1,7 +1,6 @@
-button{
+.btn_more{
   max-width: 600px;
-  width: 400px;
-  min-width: 250px;
+  min-width: 150px;
   border: none;
   border-radius: 15px;
   font-family: 'Luckiest Guy', cursive;
@@ -14,13 +13,13 @@ button{
   transition: all 300ms;
 }
 
-button:hover{
+.btn_more:hover{
   transform: scale(1.01);
   background-color: #e15656;
   color: #ececec;
 }
 
-button:active{
+.btn_more:active{
   transition: 400ms;
   transform: scale(1.01);
   background-color: #ececec;
